--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "FatherAntelope",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --mode=development --open"
+    "dev": "webpack-dev-server --mode=development --open",
+    "build": "webpack --mode=production"
   },
   "dependencies": {
     "react": "^18.3.1",
