--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "main": "src/index.js",
   "repository": "https://github.com/MCDash/frontend",
   "author": "FatherAntelope",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server --mode=development --open",
-    "build": "webpack --mode=production"
+    "dev": "webpack-dev-server --open --mode development",
+    "build": "webpack --mode production",
+    "prebuild": "yarn clean",
+    "clean": "rimraf -rf dist"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -23,6 +27,7 @@
     "@typescript-eslint/parser": "^8.2.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^9.9.0",
     "html-webpack-plugin": "^5.6.0",
     "prettier": "^3.3.3",
